# diagramagic

./: .gitignore  AGENTS.md  BUILDFORPYPI.md  Cargo.toml  DIAGRAMAGIC_V2.md  PROJECTSPEC.md  README.md  SKILL.md  dev-requirements.txt  pyproject.toml
specs/: DIAGANCHOR.md  DIAGGRAPH.md  DIAGGRAPH2.md  DIAGINCLUDE.md
src/: lib.rs
src/diagramagic/: __init__.py  cli.py  diagramagic.py  resources.py
src/diagramagic/data/: AGENTS.md  PROJECTSPEC.md  README.md  diagramagic_patterns.md  diagramagic_prompt.txt  (+1 more)
tests/: run_tests.py  test_cli_acceptance.py
tests/fixtures/: anchor_absolute.svg++  anchor_mixed_endpoints.svg++  anchor_offsets.svg++  anchor_relative_sides.svg++  arrows_auto.svg++  arrows_bounds_expansion.svg++  arrows_explicit_edges.svg++  arrows_label.svg++  arrows_label_diagonal.svg++  arrows_label_diagonal_reverse.svg++  arrows_label_rotate_modes.svg++  arrows_label_vertical.svg++  arrows_label_vertical_reverse.svg++  arrows_marker_collision.svg++  g_in_flex.svg++  graph2_circular_deps.svg++  graph2_curved_feedback.svg++  graph2_layered_flow.svg++  graph2_ortho_routing.svg++  graph2_radial_hub.svg++  graph_class_wrap.svg++  graph_class_wrap_no_style.svg++  graph_cycle.svg++  graph_dense_small.svg++  graph_edge_label_rotate_modes.svg++  graph_in_flex.svg++  graph_lr_architecture.svg++  graph_node_gap.svg++  graph_node_gap_no_gap.svg++  graph_tb_basic.svg++  include_basic.svg++  include_cycle_error.svg++  include_in_flex.svg++  include_scaled.svg++  namespace_alt.svg++  tcp_handshake.svg++  template_precedence_visual.svg++  templates_cards.svg++
(+4 files in other folders)
