[project]
name = "diagramagic"
version = "0.1.1"
description = "svg++ reference renderer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0.0",
]

[project.scripts]
diagramagic = "diagramagic.cli:main"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "diagramagic._diagramagic_resvg"
bindings = "pyo3"
include = ["src/diagramagic/data/AGENTS.md"]
